--- a/index.html
+++ b/index.html
@@ -6,26 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- Link a css -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>MUSICX</h1>
     </header>
 
-    <main>
-       <div id="form_ingreso">
+    <main class="conteiner_index">
+       <div class="form_ingreso">
         <form>
-            <div class="mb-3">
+            <div class="mb-3" >
               <label for="exampleInputUser" class="form-label">Usuario</label>
               <input type="user" class="form-control usuario" id="exampleInputUser1" placeholder="Ingrese usuario">
             </div>
             <div class="mb-3">
                 <label for="exampleInputUser" class="form-label">Contraseña</label>
                 <input type="user" class="form-control contraseña" id="exampleInputUser1" placeholder="Ingrese contraseña">
-            </div>
-  
-
-                       
+            </div>        
            <button type="submit" class="btn btn-primary">Iniciar sesion</button>
         </form>
        </div>
@@ -38,5 +37,6 @@
         
     </main>
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
