--- a/rock.html
+++ b/rock.html
@@ -54,7 +54,7 @@
             </div>  
             <div class="botones-canciones">
               <button type="submit" class="btn btn-primary boton_escuchar" >Escuchar</button>
-              <button type="submit" class="btn btn-primary boton_playlist"  >+</button>
+              <button type="submit" class="btn btn-primary boton_playlist">+</button>
             </div>
           </li>
 
@@ -65,7 +65,7 @@
             </div>
             <div class="botones-canciones">
               <button type="submit" class="btn btn-primary boton_escuchar" >Escuchar</button>
-              <button type="submit" class="btn btn-primary boton_playlist" >+</button>
+              <button type="submit" class="btn btn-primary boton_playlist">+</button>
             </div>
           </li>
         </ul>
@@ -75,7 +75,7 @@
       </form>
     </div>
   </main>
-      <script src="app.js"></script>
+      <script src="js/app.js"></script>
       <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
