Reestructuracion del JS + canciones

--- a/rock.html
+++ b/rock.html
@@ -36,12 +36,9 @@
     <div class="contenido">
       <form class="canciones-rock">
         <ul class="list-group">
-          
         </ul>
-  
-        
-  
       </form>
+      <audio src="" id="audio"></audio>
     </div>
   </main>
       <script src="js/app.js"></script>
