--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
-    <header>
-        <h1>MUSICX</h1>
+<body class="bg-claro">
+    <header class="header-index">
+        <img src="Logo.png" alt="" class="logo">
     </header>
 
     <main class="conteiner_index">
@@ -33,7 +33,7 @@
 
        <div class="registro">
             <h3>¿No tienes cuenta?</h3>
-            <button type="submit" class="btn btn-primary" onclick="location='registro.html'">Registrarse</button>
+            <button type="submit" class="btn btn-primary" onclick="location='registro.html'">Registrate</button>
        </div>
 
         
