--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ingreso</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
+    <!-- Meta desc -->
+    <meta name="description" content="Reproductor de musica online. Descubrí musica nueva cada día. Vas a poder escuchar canciones de artistas del underground, ampliando tu gusto musical y dandole espacio a nuevos talentos.">
+
+    <!-- Keywords -->
+    <meta name="keywords" content="Musica, Artistas, Canciones, Playlist">
     <!-- Link a css -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="bg-claro">
     <header class="header-index">
-        <img src="Logo.png" alt="" class="logo">
+        <img src="Logo.png" alt="Logo con descripcion" class="logo">
     </header>
 
     <main class="conteiner_index">
