--- a/search.html
+++ b/search.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <title>Inicio</title>
     
+     <!-- Meta desc -->
+     <meta name="description" content="Reproductor de musica online. Descubrí musica nueva cada día. Vas a poder escuchar canciones de artistas del underground, ampliando tu gusto musical y dandole espacio a nuevos talentos.">
+
+     <!-- Keywords -->
+     <meta name="keywords" content="Musica, Artistas, Canciones, Playlist">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Link a css -->
@@ -16,7 +21,7 @@
 </head>
 <body class="principal">
     <header class="header_main">
-        <img src="Logo2.png" alt="" class="logo">
+        <img src="Logo2.png" alt="Logo" class="logo">
 
     </header>
     <main>
